# bigbee-graph_sdk

./: .gitignore  alembic.ini  pyproject.toml  requirements.txt
graph_sdk/: __init__.py
graph_sdk/db/: session.py  session_context.py
graph_sdk/domain/email_address/: email_address.py  email_address_dtos.py
graph_sdk/domain/event/: event.py
graph_sdk/domain/event_occurrence/: event_occurrence.py
graph_sdk/domain/person/: exports.py  person.py  person_dtos.py
graph_sdk/domain/role/: dtos.py  entity.py  exports.py
graph_sdk/entities/: __init__.py  entities.py
graph_sdk/knowledge/: __init__.py  graph.py
graph_sdk/knowledge/role/: support_roles.py
graph_sdk/migrations/: env.py
graph_sdk/migrations/versions/: a151d900a106_initial.py
graph_sdk/tests/: conftest.py
graph_sdk/tests/domain/email_address/: test_email_address_create_and_fetch.py  test_email_address_fetch_when_none.py
graph_sdk/tests/domain/person/: test_people_fetch_when_no_people.py  test_people_fetch_when_one_person.py  test_person_delete.py  test_person_fetch.py
graph_sdk/tests/domain/person/email_addresses/: test_add_email_address.py
graph_sdk/tests/domain/role/: test_remote_model.py
