[project]
name = "bigbee-graph-sdk"
version = "0.1.0"
description = "SDK for interacting with bigbee-graph"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "alembic",
    "sqlalchemy",
    { path = "../bigbee-remote_models", develop = true }
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"