[tool.poetry]
name = "bigbee-graph-sdk"
version = "0.1.0"
description = "SDK for interacting with bigbee-graph"
authors = ["Joseph Villa <joseph@bigbeelabs.com>"]
readme = "README.md"
packages = [{ include = "graph_sdk" }]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "*"
sqlalchemy = "*"
bigbee-acts-as-having = { path = "../bigbee-acts_as_having", develop = true }
bigbee-remote_models = { path = "../bigbee-remote_models", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"